MDEV-18078 Assertion `trnman_has_locked_tables(trn) > 0' failed

Problem was that in case of implicit rollback for alter table
Aria did try to run commit twice.

The test case for this is tricky to do in 10.2, so it will
be added to 10.4 as part of BACKUP STAGE testing.